# Icp-Project

./: .gitignore  Cargo.toml  README.md  TESTING.md  dfx.json  manual_test.sh  test_backend.sh  test_production_ready.sh
src/backend/: Cargo.toml  payment_backend_backend.did
src/backend/src/: lib.rs  qr.rs  rates.rs  topup.rs  transactions.rs  types.rs
src/frontend/: .env.production  README.md  design.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/frontend/src/: App.jsx  index.css
src/frontend/src/components/: Layout.jsx  Sidebar.jsx  WalletManager.jsx
src/frontend/src/components/modal/: QRScannerModal.jsx
src/frontend/src/contexts/: ICPContext.jsx
src/frontend/src/pages/: About.jsx  ClaimQRIS.jsx  Dashboard.jsx  Home.jsx  Landing.jsx  Network.jsx  NetworkStats.jsx  PaymentScanner.jsx  QRGenerator.jsx  TopUp.jsx  TransactionHistory.jsx
src/frontend/src/services/: backend.js
src/payment_backend_backend/: Cargo.toml
